--- a/Spreadsheet_Sonam_Yangtso/SpreadsheetEngine/SpreadsheetEngine.csproj
+++ b/Spreadsheet_Sonam_Yangtso/SpreadsheetEngine/SpreadsheetEngine.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Cell.cs" />
+    <Compile Include="SpreadsheetCell.cs" />
     <Compile Include="Spreadsheet.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
