implemented some more methods and add test cases

--- a/Spreadsheet_Sonam_Yangtso/SpreadsheetEngine/SpreadsheetEngine.csproj
+++ b/Spreadsheet_Sonam_Yangtso/SpreadsheetEngine/SpreadsheetEngine.csproj
@@ -42,9 +42,17 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Cell.cs" />
+    <Compile Include="GlobalSuppressions.cs" />
     <Compile Include="SpreadsheetCell.cs" />
     <Compile Include="Spreadsheet.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Analyzer Include="..\packages\StyleCop.Analyzers.1.1.118\analyzers\dotnet\cs\StyleCop.Analyzers.CodeFixes.dll" />
+    <Analyzer Include="..\packages\StyleCop.Analyzers.1.1.118\analyzers\dotnet\cs\StyleCop.Analyzers.dll" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
