--- a/Spreadsheet_Sonam_Yangtso/NUnit.Tests/NUnit.Tests.csproj
+++ b/Spreadsheet_Sonam_Yangtso/NUnit.Tests/NUnit.Tests.csproj
@@ -55,6 +55,10 @@
       <Name>Spreadsheet_Sonam_Yangtso</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <Analyzer Include="..\packages\StyleCop.Analyzers.1.1.118\analyzers\dotnet\cs\StyleCop.Analyzers.CodeFixes.dll" />
+    <Analyzer Include="..\packages\StyleCop.Analyzers.1.1.118\analyzers\dotnet\cs\StyleCop.Analyzers.dll" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
