--- a/Spreadsheet_Sonam_Yangtso/SpreadsheetEngine/SpreadsheetEngine.csproj
+++ b/Spreadsheet_Sonam_Yangtso/SpreadsheetEngine/SpreadsheetEngine.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Cell.cs" />
+    <Compile Include="OperatorNodeFactory.cs" />
     <Compile Include="DivisionOperatorNode.cs" />
     <Compile Include="MultiplicationOperatorNode.cs" />
     <Compile Include="MinusOperatorNode.cs" />
