--- a/Spreadsheet_Sonam_Yangtso/NUnit.Tests/NUnit.Tests.csproj
+++ b/Spreadsheet_Sonam_Yangtso/NUnit.Tests/NUnit.Tests.csproj
@@ -44,6 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+    <None Include="stylecop.json" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\SpreadsheetEngine\SpreadsheetEngine.csproj">
