modified in all the Node classes

--- a/Spreadsheet_Sonam_Yangtso/ExpressionTreeDemo/ExpressionTreeDemo.csproj
+++ b/Spreadsheet_Sonam_Yangtso/ExpressionTreeDemo/ExpressionTreeDemo.csproj
@@ -47,12 +47,17 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\SpreadsheetEngine\SpreadsheetEngine.csproj">
       <Project>{d6f6b517-1558-47cc-a89e-759ab6caa187}</Project>
       <Name>SpreadsheetEngine</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Analyzer Include="..\packages\StyleCop.Analyzers.1.1.118\analyzers\dotnet\cs\StyleCop.Analyzers.CodeFixes.dll" />
+    <Analyzer Include="..\packages\StyleCop.Analyzers.1.1.118\analyzers\dotnet\cs\StyleCop.Analyzers.dll" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
