after stylecop analysis

--- a/Spreadsheet_Sonam_Yangtso/ExpressionTreeDemo/ExpressionTreeDemo.csproj
+++ b/Spreadsheet_Sonam_Yangtso/ExpressionTreeDemo/ExpressionTreeDemo.csproj
@@ -48,6 +48,7 @@
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
+    <None Include="stylecop.json" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\SpreadsheetEngine\SpreadsheetEngine.csproj">
