--- a/Spreadsheet_Sonam_Yangtso/SpreadsheetEngine/SpreadsheetEngine.csproj
+++ b/Spreadsheet_Sonam_Yangtso/SpreadsheetEngine/SpreadsheetEngine.csproj
@@ -42,7 +42,6 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Cell.cs" />
-    <Compile Include="RightParenthesis.cs" />
     <Compile Include="LeftParentheses.cs" />
     <Compile Include="OperatorNodeFactory.cs" />
     <Compile Include="DivisionOperatorNode.cs" />
@@ -50,6 +49,7 @@
     <Compile Include="MinusOperatorNode.cs" />
     <Compile Include="PlusOperatorNode.cs" />
     <Compile Include="OperatorNode.cs" />
+    <Compile Include="RightParentheses.cs" />
     <Compile Include="VariableNode.cs" />
     <Compile Include="ConstantNode.cs" />
     <Compile Include="ExpressionTreeNode.cs" />
