--- a/Spreadsheet_Sonam_Yangtso/Spreadsheet_Sonam_Yangtso/Spreadsheet_Sonam_Yangtso.csproj
+++ b/Spreadsheet_Sonam_Yangtso/Spreadsheet_Sonam_Yangtso/Spreadsheet_Sonam_Yangtso.csproj
@@ -69,6 +69,7 @@
     <None Include="..\.editorconfig">
       <Link>.editorconfig</Link>
     </None>
+    <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -88,6 +89,10 @@
       <Project>{d6f6b517-1558-47cc-a89e-759ab6caa187}</Project>
       <Name>SpreadsheetEngine</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Analyzer Include="..\packages\StyleCop.Analyzers.1.1.118\analyzers\dotnet\cs\StyleCop.Analyzers.CodeFixes.dll" />
+    <Analyzer Include="..\packages\StyleCop.Analyzers.1.1.118\analyzers\dotnet\cs\StyleCop.Analyzers.dll" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
