--- a/Spreadsheet_Sonam_Yangtso/SpreadsheetEngine/SpreadsheetEngine.csproj
+++ b/Spreadsheet_Sonam_Yangtso/SpreadsheetEngine/SpreadsheetEngine.csproj
@@ -44,6 +44,7 @@
     <Compile Include="Cell.cs" />
     <Compile Include="ChangeColor.cs" />
     <Compile Include="ChangeText.cs" />
+    <Compile Include="CircularReferenceException.cs" />
     <Compile Include="Invoker.cs" />
     <Compile Include="ICommand.cs" />
     <Compile Include="LeftParentheses.cs" />
